--- a/frontend/my-site/src/PlaylistInfo.css
+++ b/frontend/my-site/src/PlaylistInfo.css
@@ -16,18 +16,50 @@
   .track-list {
 
     overflow-y: scroll;
-    border-radius: 8px;
     background-color:#151515;
     padding:0;
     margin-top: 5%;
     width: 68%;
     max-height: 550px;
-    overflow-x: 0;
+    overflow-x:hidden;
+     
+  }
+
+  .track-list {
+    --mask: linear-gradient(to bottom, 
+        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 60%, 
+        rgba(0,0,0, 0) 95%, rgba(0,0,0, 0) 0
+    ) 100% 50% / 100% 100% repeat-x;
+    
+    border: 0px #d8d8d8 dashed;
+    font: 2em/1.6em Arial;
+    -webkit-mask: var(--mask); 
+    mask: var(--mask);
+    
   }
   
   .track-list::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
+  .track-list::-webkit-scrollbar {
+    width: 10px; /* Add the unit 'px' after the value */
+    height: 2px; /* Specify the height of the scrollbar */
+    margin-left: 5px;
+}
+
+.track-list::-webkit-scrollbar-thumb {
+    background-color: #a8a5a5;
+    margin-left:5px;
+    border-radius: 10px;
+}
+.track-list::-webkit-scrollbar-thumb:hover {
+  background-color: #ccc;
+  transition: all 2s linear;
+}
+
+.track-list::-webkit-scrollbar-track {
+    background-color: transparent;
+}
   .track-list a {
     text-decoration: none;
     height:100%;
@@ -63,7 +95,8 @@
   }
 
   .track-card {
-    border-radius: 5px;
+    border-radius: 8px;
+
     background-color:#444242;
     max-width:100%;
     display: flex;
